feat: add p0 batch actions
